<resources>
    <string name="app_name">homeWork_5.0.2</string>

    //поля меню
    <string name="actionSettings">Настройки</string>
    <string name="actionExit">Выход</string>
    <string name="actionSubscribe">Подписка</string>
    <string name="actionPhoto">Просмотр фотографий</string>
    <string name="actionHealth">Мониторинг здоровья</string>
    <string name="actionPayment">Оплата услуг</string>
    <string name="actionInputAddress">Ввод адреса</string>
    <string name="actionPlanning">Планировщик</string>
    <string name="actionOpenNote">Записная книжка</string>

    //1. Подписка
    <string name="app_title">Подписка</string>
    <string name="user_name">Имя пользователя</string>
    <string name="email_name">Электронная почта</string>
    <string name="button_ok">OK</string>
    <string name="button_clear">Очистить</string>
    <string name="messageOutput">Hello Word!</string>

    //2. Просмотр фото
    <string name="btn_back">Назад</string>
    <string name="btn_forward">Вперед</string>
    <string name="random_text">Привет Мир!</string>
    <string name="app_title_photo">Просмотр фото</string>
    <string name="textLink">http://myfile.org/</string>

    //3. Мониторниг здоровья
    <string name="author_name">Designed by Liapunov Aleksandr</string>
    <string name="app_title_health">Комплексная система мониторинга здоровья</string>
    <string name="name_input">Имя</string>
    <string name="surname_input">Фамилия</string>
    <string name="secondName_input">Отчество</string>
    <string name="age_input">Возраст</string>
    <string name="save_button">Сохранить</string>
    <string name="pressureData_button">Данные давления</string>
    <string name="lifeData_button">Жизненные показатели</string>
    <string name="pActivity_title">Показания давления</string>
    <string name="upPressure_input">Верхнее давление</string>
    <string name="lowPressure_input">Нижнее давление</string>
    <string name="pulse_input">Пульс</string>
    <string name="tach_checkbox">Тахикардия</string>
    <string name="data_text">Дата</string>
    <string name="data_textTitle">Дата:</string>
    <string name="time_text">Время</string>
    <string name="time_textTitle">Время:</string>
    <string name="saveP_button">Сохранить</string>
    <string name="lifeWrite_title">Жизненные данные</string>
    <string name="weight_input">Вес</string>
    <string name="numOfSteps_input">Количество шагов</string>
    <string name="incorrect_value">Введены неправильные данные</string>
    <string name="back_button">Назад</string>

    //4. Оплата услуг
    <string name="input_money">Ввод денег</string>
    <string name="information_about_payment">Игформация об оплате</string>
    <string name="btn_OK">Ок</string>
    <string name="by_a_card">С банковской карты</string>
    <string name="by_a_mobile">С мобильного телефона</string>
    <string name="by_a_cash">Наличными по адресу</string>

    //5. Ввод адреса
    <string name="spinner_countries">Показать адрес</string>
    <string name="spinner_cities">Показать адрес</string>
    <string name="spinner_number_house">Показать адрес</string>
    <string name="btn_show_address">Показать адрес</string>
    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белоруссия</item>
    </string-array>
    <string-array name="r_cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
    </string-array>
    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>
    <string-array name="b_cities">
        <item>Минск</item>
        <item>Гомель</item>
        <item>Торжок</item>
    </string-array>
    //6. Планировщик

    //7. Ваш адрес
    <string name="timeOfStart">Дата-время старта задачи:</string>
    <string name="timeOfEnd">Дата-время окончания задачи:</string>
    //8. Записная книжка
    <string name="inputNote">Введите вашу заметку</string>
    <string name="btnSaveNote">Сохранить</string>



</resources>