<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/actionSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/actionExit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_subscribe"
        android:orderInCategory="100"
        android:title="@string/actionSubscribe"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photo"
        android:orderInCategory="100"
        android:title="@string/actionPhoto"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_health"
        android:orderInCategory="100"
        android:title="@string/actionHealth"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_payment"
        android:orderInCategory="100"
        android:title="@string/actionPayment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_input_address"
        android:orderInCategory="100"
        android:title="@string/actionInputAddress"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/actionOpenNote"
        app:showAsAction="never" />
</menu>